# EV-Tracking

./: emcdriver.tgz  red_cloud.eap
Docs/: Business Rules.doc  Crud Matrix.xlsx  FinalRelease.odp  FinalWriteup.doc  INSTALL  Process Definition.odg  Process Definition.odt  SRS.doc  SRSDocumentRevised.docx  Table of Contents.doc  red_cloud.eap  red_cloud_old.EAP  requirements trace.xlsx
Docs/Other Diagrams/: Database.vsd  ER Diag.vsd  Thumbs.db
Docs/Scenarios/: BMS Update.odt  Controller Update.odt  Local Update.odt  Record New Data.odt  Requirements.odt  USECASE acquire gps information.doc  USECASE system shutdown.doc  USECASE system startup.doc
Docs/business_case/: Business Case.doc  Business Case.ppt  Thumbs.db
Docs/reqs/: Requirements.odt  Thumbs.db  requirements trace.xls
Docs/tests/: Alpha Test to Be Run for Team VIS.doc
Velo/: README.TXT  Team Velo - Final Write-Up.docx  Test.py  VeloEVinstall.sql  Velomobile Gantt.mpp  Velomobile Interface Control Document.docx  Velomobile Risk List.docx  Velomobile SRS.docx
Velo/CRUD Matrix/: Embedded CRUD.xlsx  Webserver CRUD.xlsx
Velo/Final Presentation/: Current Gantt.mpp  Original Gant.mpp  Team Velo.pptx
Velo/Integration Plans/: Integration Plan.docx
Velo/Outsourcing/: Outsourcing Project Journal.docx  Outsourcing Project Outcomes.docx  TelemetryWindowingOutline.docx
src/: CMakeLists.txt  README.txt  TestScript.py
src/PrototypeDriver/: BMSDriver.cpp  GPSDriver.cpp  bms.txt  bms_write  emc.txt  emcdriver  gps.txt  gps_write  write
src/RCAcquisition/: .kdev_include_paths  CMakeLists.txt  CMakeLists.txt~  Garmin18Reader.cpp  Garmin18Reader.cpp~  LithiumateReader.cpp  LithiumateReader.cpp~  RCAcquisition.cpp  SolitonReader.cpp  SolitonReader.cpp~  iBMSReader.cpp  iBMSReader.cpp~  iEMController.cpp  iEMController.cpp~  iGPSReader.cpp  iGPSReader.cpp~  iNamedPipeReader.cpp  main.cpp  main.cpp~  serial.cpp  testBMS.cpp  testEMC.cpp  testModule.cpp
src/RCCommunication/: serial.cpp
src/RCObjects/: .kdev_include_paths  BMS.cpp  BMS.cpp~  Battery.cpp  CMakeLists.txt  GPSdata.cpp  GPSdata.cpp~  Motor.cpp  Motor.cpp~  Time.cpp  Time.cpp~  Trip.cpp  testObject.cpp
src/RCPersist/: CMakeLists.txt  CMakeLists.txt~  RCDatabase.cpp  dbaseinterface.cpp  dbaseinterface.cpp~  dbaseinterface.h  iRCDatabase.cpp  mysqlinterface.h  mysqltest.cpp  mysqltest.h  testmain.cpp
src/RCPython/: CMakeLists.txt  VeloComm.cpp  VeloComm.hpp  VeloComm.py
src/include/RCAcquisition/: Garmin18Reader.hpp  Garmin18Reader.hpp~  LithiumateReader.hpp  LithiumateReader.hpp~  RCAcquisition.hpp  SolitonReader.hpp  SolitonReader.hpp~  UpdateCall.hpp  iBMSReader.hpp  iBMSReader.hpp~  iEMController.hpp  iEMController.hpp~  iGPSReader.hpp  iGPSReader.hpp~  iNamedPipeReader.hpp  iUpdateStradegy.hpp  iUpdateStradegy.hpp~  serial.h  testBMS.hpp  testEMC.hpp  testModule.hpp
src/include/RCCommunication/: serial.h
src/include/RCObjects/: BMS.hpp  BMS.hpp~  Battery.hpp  GPSdata.hpp  GPSdata.hpp~  Motor.hpp  Motor.hpp~  Time.hpp  Time.hpp~  Trip.hpp  Trip.hpp~  testObject.hpp
src/include/RCPersist/: RCDatabase.hpp  classes.h  dbaseinterface.h  dbaseinterface.h~  iRCDatabase.hpp  iReport.hpp  mysqlinterface.h  mysqlinterface.h~
(+149 files in other folders)
